# quarterback

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
config/: alerts.example.yaml
org-context/: README.md  constraints.example.md  goals.example.md  projects.example.yaml  workflows.example.yaml
src/quarterback/: __init__.py  advisory_analyzer.py  alert_daemon.py  cli.py  config.py  context_manager.py  database.py  notifications.py  playbook.py  prioritization.py  server.py  setup_wizard.py  time_planner.py  webhooks.py
src/quarterback/migrations/: add_advisory_tables.py  add_agent_and_webhook_tables.py  add_task_cost.py
tests/: conftest.py  test_advisory_analyzer.py  test_cli.py  test_database.py  test_playbook.py  test_prioritization.py  test_setup_wizard.py  test_time_planner.py  test_webhooks.py
